--- a/_includes/master/manifests/cnx.yaml
+++ b/_includes/master/manifests/cnx.yaml
@@ -6,6 +6,7 @@ cnx.yaml acccepts the following include flags:
 | orch             | openshift                |
 | datastore        | kdd, etcd                |
 | platform         | eks                      |
+| rbac             | pre23                    |
 
 {% endcomment -%}
 {%- if include.datastore == "kdd" %}
@@ -135,6 +136,60 @@ spec:
   # to enable TLS certificate verification.
   insecureSkipTLSVerify: true
   #caBundle:
+
+---
+
+# This ClusterRole is used to control the RBAC mechanism for Calico tiered policy.
+# -  If the resources are set to ["networkpolicies","globalnetworkpolicies"], then RBAC for Calico policy has per-tier
+#    granularity defined using the "tier.networkpolicies" and "tier.globalnetworkpolicies" pseudo-resource types.
+#    This is the default as of v2.3.
+# -  If the resources are set to ["tier.networkpolicies","tier.globalnetworkpolicies"], this ensures RBAC for Calico
+#    policy is the v2.2 (and earlier) format, where Calico policy RBAC is identical across all tiers that the user can
+#    access (i.e. has 'get' access for).
+#
+# Never include both networkpolicies and tier.networkpolicies and/or globalnetworkpolicies and
+# tier.globalnetworkpolicies in the resources list for this ClusterRole since that will grant all users full access to
+# Calico policy.
+#
+# If you are upgrading from CNX v2.2 or earlier:
+# - to maintain v2.2 RBAC behavior for tiered Calico policy, modify the resources line below to read:
+#        resources: ["tier.networkpolicies","tier.globalnetworkpolicies"]
+# - to start using per-tier RBAC for Calico policy resources, prior to upgrading update any Role and ClusterRole
+#   resources for your users that reference the projectcalico.org policy resource types networkpolicies or
+#   globalnetworkpolicies to also include tier.networkpolicies and tier.globalnetworkpolicies respectively.
+#   For example, the resources ["networkpolicies"] would be replaced with ["networkpolicies", "tier.networkpolicies"].
+#   Once the upgrade is complete, the Role and ClusterRole definitions can be further updated to provide per-tier
+#   granularity of Calico policy RBAC. Refer to the Tigera documentation for details.
+kind: ClusterRole
+apiVersion: rbac.authorization.k8s.io/v1beta1
+metadata:
+  name: ee-calico-tiered-policy-passthru
+rules:
+- apiGroups: ["projectcalico.org"]
+{%- if include.rbac == "pre23" %}
+  resources: ["tier.networkpolicies","tier.globalnetworkpolicies"]
+{%- else %}
+  resources: ["networkpolicies","globalnetworkpolicies"]
+{%- endif %}
+  verbs: ["*"]
+
+---
+
+kind: ClusterRoleBinding
+apiVersion: rbac.authorization.k8s.io/v1beta1
+metadata:
+  name: ee-calico-tiered-policy-passthru
+subjects:
+- kind: Group
+  name: system:authenticated
+  apiGroup: rbac.authorization.k8s.io
+- kind: Group
+  name: system:unauthenticated
+  apiGroup: rbac.authorization.k8s.io
+roleRef:
+  kind: ClusterRole
+  name: ee-calico-tiered-policy-passthru
+  apiGroup: rbac.authorization.k8s.io
 
 ---
 
@@ -664,7 +719,10 @@ metadata:
 rules:
 # "list" requests that the Tigera EE Manager needs
 - apiGroups: ["projectcalico.org","networking.k8s.io","extensions",""]
-  resources: ["tiers","networkpolicies","globalnetworkpolicies","namespaces","globalnetworksets"]
+  # Use both networkpolicies and tier.networkpolicies, and globalnetworkpolicies and tier.globalnetworkpolicies resource
+  # types to ensure identical behavior irrespective of the Calico RBAC scheme (see the ClusterRole
+  # "ee-calico-tiered-policy-passthru" for more details).
+  resources: ["tiers","networkpolicies","tier.networkpolicies","globalnetworkpolicies","tier.globalnetworkpolicies","namespaces","globalnetworksets"]
   verbs: ["watch","list"]
 # Access to flow logs, audit logs, and statistics
 - apiGroups: [""]
@@ -685,7 +743,10 @@ metadata:
 rules:
 # Full access to all network policies
 - apiGroups: ["projectcalico.org","networking.k8s.io","extensions"]
-  resources: ["tiers","networkpolicies","globalnetworkpolicies","globalnetworksets"]
+  # Use both networkpolicies and tier.networkpolicies, and globalnetworkpolicies and tier.globalnetworkpolicies resource
+  # types to ensure identical behavior irrespective of the Calico RBAC scheme (see the ClusterRole
+  # "ee-calico-tiered-policy-passthru" for more details).
+  resources: ["tiers","networkpolicies","tier.networkpolicies","globalnetworkpolicies","tier.globalnetworkpolicies","globalnetworksets"]
   verbs: ["create","update","delete","patch","get","watch","list"]
 # Additional "list" requests that the Tigera EE Manager needs
 - apiGroups: [""]
