Mount CA cert at the right path. (#797)

--- a/_includes/v2.2/manifests/monitor-calico.yaml
+++ b/_includes/v2.2/manifests/monitor-calico.yaml
@@ -459,7 +459,7 @@ spec:
               mountPath: /var/log/calico
 {%- if include.secure_es == "true" %}
             - name: elastic-ca-cert-volume
-              mountPath: /etc/fluentd/elastic/ca.pem
+              mountPath: /etc/fluentd/elastic
 {%- endif %}
       volumes:
         - name: var-log-calico
