CNX-5934 fix building manifest w/etcd and typha (#804)

--- a/_includes/master/manifests/calico-typha.yaml
+++ b/_includes/master/manifests/calico-typha.yaml
@@ -199,7 +199,7 @@ spec:
       - name: etcd-certs
         secret:
           secretName: calico-etcd-secrets
-{%- endif -%}
+{%- endif %}
 
 ---
 
