--- a/_includes/v2.3/manifests/calico.yaml
+++ b/_includes/v2.3/manifests/calico.yaml
@@ -26,7 +26,7 @@ calico.yaml acccepts the following include flags:
 #   coreos/flannel:{{site.data.versions[page.version].first.components["flannel"].version}}
 {%- endif %}
 
-{% include {{page.version}}/manifests/calico-config.yaml datastore=include.datastore network=include.network calico_ipam=include.calico_ipam variant_name=variant_name typha=include.typha %}
+{% include {{page.version}}/manifests/calico-config.yaml datastore=include.datastore network=include.network calico_ipam=include.calico_ipam variant_name=variant_name typha=include.typha app_layer_policy=include.app_layer_policy %}
 ---
 {% if include.datastore == "etcd" %}
 {% include {{page.version}}/manifests/calico-etcd-secrets.yaml %}
