--- a/install/config.yaml
+++ b/install/config.yaml
@@ -7,5 +7,7 @@ elasticsearch:
   - ["PUT", "_xpack/ml/datafeeds/datafeed-inbound_connection_spike", "./data/inbound-connection-spike-datafeed.json"]
   - ["PUT", "_xpack/ml/anomaly_detectors/service_bytes_anomaly", "./data/service-bytes-anomaly-job.json"]
   - ["PUT", "_xpack/ml/datafeeds/datafeed-service_bytes_anomaly", "./data/service-bytes-anomaly-datafeed.json"]
+  - ["PUT", "_xpack/ml/anomaly_detectors/pod_outlier_ip_activity", "./data/pod-outlier-ip-activity-job.json"]
+  - ["PUT", "_xpack/ml/datafeeds/datafeed-pod_outlier_ip_activity", "./data/pod-outlier-ip-activity-datafeed.json"]
 kibana:
   - ["POST", "api/saved_objects/_bulk_create", "./data/api-kibana-dashboard.json"]
