Split recon jobs into pods / external
Signed-off-by: Spike Curtis <spike@tigera.io>

--- a/install/config.yaml
+++ b/install/config.yaml
@@ -1,8 +1,12 @@
 elasticsearch:
-  - ["PUT", "_xpack/ml/anomaly_detectors/port_scan", "./data/port-scan-job.json"]
-  - ["PUT", "_xpack/ml/datafeeds/datafeed-port_scan", "./data/port-scan-datafeed.json"]
-  - ["PUT", "_xpack/ml/anomaly_detectors/ip_sweep", "./data/ip-sweep-job.json"]
-  - ["PUT", "_xpack/ml/datafeeds/datafeed-ip_sweep", "./data/ip-sweep-datafeed.json"]
+  - ["PUT", "_xpack/ml/anomaly_detectors/port_scan_pods", "./data/port-scan-pods-job.json"]
+  - ["PUT", "_xpack/ml/datafeeds/datafeed-port_scan_pods", "./data/port-scan-pods-datafeed.json"]
+  - ["PUT", "_xpack/ml/anomaly_detectors/ip_sweep_pods", "./data/ip-sweep-pods-job.json"]
+  - ["PUT", "_xpack/ml/datafeeds/datafeed-ip_sweep_pods", "./data/ip-sweep-pods-datafeed.json"]
+  - ["PUT", "_xpack/ml/anomaly_detectors/port_scan_external", "./data/port-scan-external-job.json"]
+  - ["PUT", "_xpack/ml/datafeeds/datafeed-port_scan_external", "./data/port-scan-external-datafeed.json"]
+  - ["PUT", "_xpack/ml/anomaly_detectors/ip_sweep_external", "./data/ip-sweep-external-job.json"]
+  - ["PUT", "_xpack/ml/datafeeds/datafeed-ip_sweep_external", "./data/ip-sweep-external-datafeed.json"]
   - ["PUT", "_xpack/ml/anomaly_detectors/inbound_connection_spike", "./data/inbound-connection-spike-job.json"]
   - ["PUT", "_xpack/ml/datafeeds/datafeed-inbound_connection_spike", "./data/inbound-connection-spike-datafeed.json"]
   - ["PUT", "_xpack/ml/anomaly_detectors/service_bytes_anomaly", "./data/service-bytes-anomaly-job.json"]
