--- a/fluent.conf
+++ b/fluent.conf
@@ -65,8 +65,8 @@
   @type record_transformer
   enable_ruby
   <record>
-    # Create a name field from the objectRef.name or responseObject.metadata.name
-    name ${record["responseObject"].nil? ? (record["objectRef"].nil? ? "-" : record["objectRef"]["name"]) : record["responseObject"]["metadata"]["name"]}
+    # Create a name field from the objectRef.name, responseObject.metadata.name or responseObject.details.name
+    name ${record["responseObject"].nil? ? (record["objectRef"].nil? ? "-" : record["objectRef"]["name"]) :	(record["responseObject"]["metadata"].nil? ? record["responseObject"]["details"]["name"] : record["responseObject"]["metadata"]["name"])}
   </record>
 </filter>
 
