--- a/fluent.conf
+++ b/fluent.conf
@@ -32,10 +32,13 @@
   password "#{ENV['ELASTIC_PASSWORD']}"
   ca_file /etc/fluentd/elastic/ca.pem
   ssl_verify "#{ENV['ELASTIC_SSL_VERIFY']}"
-  index_name tigera_secure_ee_flows
+  index_name "tigera_secure_ee_flows.#{ENV['ELASTIC_INDEX_SUFFIX']}.%Y%m%d"
   template_file /fluentd/etc/elastic_mapping_flows.template
   template_name tigera_secure_ee_flows
-  <buffer>
+  
+  <buffer time>
+    timekey      1d # index renew frequency
+
     flush_mode interval
     flush_interval "#{ENV['ELASTIC_FLUSH_INTERVAL']}"
   </buffer>
@@ -79,8 +82,10 @@
   password "#{ENV['ELASTIC_PASSWORD']}"
   ca_file /etc/fluentd/elastic/ca.pem
   ssl_verify "#{ENV['ELASTIC_SSL_VERIFY']}"
-  index_name tigera_secure_ee_audit_ee
-  <buffer>
+  index_name "tigera_secure_ee_audit_ee.#{ENV['ELASTIC_INDEX_SUFFIX']}.%Y%m%d"
+  <buffer time>
+    timekey      1d # index renew frequency
+
     flush_mode interval
     flush_interval "#{ENV['ELASTIC_FLUSH_INTERVAL']}"
   </buffer>
@@ -95,8 +100,10 @@
   password "#{ENV['ELASTIC_PASSWORD']}"
   ca_file /etc/fluentd/elastic/ca.pem
   ssl_verify "#{ENV['ELASTIC_SSL_VERIFY']}"
-  index_name tigera_secure_ee_audit_kube
-  <buffer>
+  index_name "tigera_secure_ee_audit_kube.#{ENV['ELASTIC_INDEX_SUFFIX']}.%Y%m%d"
+  <buffer time>
+    timekey      1d # index renew frequency
+
     flush_mode interval
     flush_interval "#{ENV['ELASTIC_FLUSH_INTERVAL']}"
   </buffer>
