--- a/fluent.conf
+++ b/fluent.conf
@@ -35,10 +35,8 @@
   index_name "tigera_secure_ee_flows.#{ENV['ELASTIC_INDEX_SUFFIX']}.%Y%m%d"
   template_file /fluentd/etc/elastic_mapping_flows.template
   template_name tigera_secure_ee_flows
-  
-  <buffer time>
-    timekey      1d # index renew frequency
-
+  <buffer tag, time>
+    timekey 1d
     flush_mode interval
     flush_interval "#{ENV['ELASTIC_FLUSH_INTERVAL']}"
   </buffer>
@@ -83,9 +81,8 @@
   ca_file /etc/fluentd/elastic/ca.pem
   ssl_verify "#{ENV['ELASTIC_SSL_VERIFY']}"
   index_name "tigera_secure_ee_audit_ee.#{ENV['ELASTIC_INDEX_SUFFIX']}.%Y%m%d"
-  <buffer time>
-    timekey      1d # index renew frequency
-
+  <buffer tag, time>
+    timekey 1d
     flush_mode interval
     flush_interval "#{ENV['ELASTIC_FLUSH_INTERVAL']}"
   </buffer>
@@ -101,9 +98,8 @@
   ca_file /etc/fluentd/elastic/ca.pem
   ssl_verify "#{ENV['ELASTIC_SSL_VERIFY']}"
   index_name "tigera_secure_ee_audit_kube.#{ENV['ELASTIC_INDEX_SUFFIX']}.%Y%m%d"
-  <buffer time>
-    timekey      1d # index renew frequency
-
+  <buffer tag, time>
+    timekey 1d
     flush_mode interval
     flush_interval "#{ENV['ELASTIC_FLUSH_INTERVAL']}"
   </buffer>
