--- a/fluent_s3.conf
+++ b/fluent_s3.conf
@@ -37,12 +37,11 @@
     index_name "tigera_secure_ee_flows.#{ENV['ELASTIC_INDEX_SUFFIX']}.%Y%m%d"
     template_file /fluentd/etc/elastic_mapping_flows.template
     template_name tigera_secure_ee_flows
-    <buffer time>
-      timekey      1d # index renew frequency
-
-      flush_mode interval
-      flush_interval "#{ENV['ELASTIC_FLUSH_INTERVAL']}"
-    </buffer>
+  <buffer tag, time>
+    timekey 1d
+    flush_mode interval
+    flush_interval "#{ENV['ELASTIC_FLUSH_INTERVAL']}"
+  </buffer>
   </store>
   <store>
     @type s3
@@ -99,12 +98,11 @@
     ca_file /etc/fluentd/elastic/ca.pem
     ssl_verify "#{ENV['ELASTIC_SSL_VERIFY']}"
     index_name "tigera_secure_ee_audit_ee.#{ENV['ELASTIC_INDEX_SUFFIX']}.%Y%m%d"
-    <buffer time>
-      timekey      1d # index renew frequency
-
-      flush_mode interval
-      flush_interval "#{ENV['ELASTIC_FLUSH_INTERVAL']}"
-    </buffer>
+  <buffer tag, time>
+    timekey 1d
+    flush_mode interval
+    flush_interval "#{ENV['ELASTIC_FLUSH_INTERVAL']}"
+  </buffer>
   </store>
   <store>
     @type s3
@@ -132,12 +130,11 @@
     ca_file /etc/fluentd/elastic/ca.pem
     ssl_verify "#{ENV['ELASTIC_SSL_VERIFY']}"
     index_name "tigera_secure_ee_audit_kube.#{ENV['ELASTIC_INDEX_SUFFIX']}.%Y%m%d"
-    <buffer time>
-      timekey      1d # index renew frequency
-
-      flush_mode interval
-      flush_interval "#{ENV['ELASTIC_FLUSH_INTERVAL']}"
-    </buffer>
+  <buffer tag, time>
+    timekey 1d
+    flush_mode interval
+    flush_interval "#{ENV['ELASTIC_FLUSH_INTERVAL']}"
+  </buffer>
   </store>
   <store>
     @type s3
