--- a/_includes/master/manifests/monitor-calico.yaml
+++ b/_includes/master/manifests/monitor-calico.yaml
@@ -415,6 +415,11 @@ spec:
         - name: fluentd
           image: {{site.data.versions[page.version].first.dockerRepo}}/{{site.imageNames["fluentd"]}}:{{site.data.versions[page.version].first.components["fluentd"].version}}
           env:
+            - name: ELASTIC_INDEX_SUFFIX
+              valueFrom:
+              configMapKeyRef:
+                name: tigera-cnx-manager-config
+                key: tigera.cnx-manager.cluster-name
             - name: FLOW_LOG_FILE
               value: /var/log/calico/flowlogs/flows.log
 {%- if include.secure_es == "true" %}
