Don't use ConfigMap in wrong namespace for passing cluster name to fluentd. (#862)
There's no existing ConfigMap that would make a natural home for this option, and I'm a little reluctant to add one (especially since it's a duplicate of a value elsewhere anyway).  Hopefully operator / HELM will make this go away by providing a single point to set this value.

--- a/_includes/master/manifests/cnx.yaml
+++ b/_includes/master/manifests/cnx.yaml
@@ -75,7 +75,8 @@ data:
   # Enable ALP support in the UI
   tigera.cnx-manager.alp-support: "false"
   # The name of the cluster.  This field is used as part of the index name of Elasticsearch logs, and is intended
-  # to allow multiple clusters to share one Elasticsearch cluster.
+  # to allow multiple clusters to share one Elasticsearch cluster.  The value of this field must match that of 
+  # ELASTIC_INDEX_SUFFIX in tigera-fluentd-node.
   tigera.cnx-manager.cluster-name: "cluster"
 
 {%- if include.platform != "eks" %}
