--- a/_includes/master/manifests/monitor-calico.yaml
+++ b/_includes/master/manifests/monitor-calico.yaml
@@ -415,11 +415,11 @@ spec:
         - name: fluentd
           image: {{site.data.versions[page.version].first.dockerRepo}}/{{site.imageNames["fluentd"]}}:{{site.data.versions[page.version].first.components["fluentd"].version}}
           env:
+            # The name of the cluster.  This field is used as part of the index name of Elasticsearch logs, and is intended
+            # to allow multiple clusters to share one Elasticsearch cluster.  The value of this field must match that of 
+            # tigera.cnx-manager.cluster-name in tigera-cnx-manager-config.
             - name: ELASTIC_INDEX_SUFFIX
-              valueFrom:
-                configMapKeyRef:
-                  name: tigera-cnx-manager-config
-                  key: tigera.cnx-manager.cluster-name
+              value: cluster
             - name: FLOW_LOG_FILE
               value: /var/log/calico/flowlogs/flows.log
 {%- if include.secure_es == "true" %}
